@@ -32,6 +32,7 @@ Misc:
  - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
  - Qt: Set default log level to FATAL, ERROR and WARN
  - Qt: Clarify some phrasing in the menus
+ - GBA Memory: Implement 16- and 32-bit loads from SRAM
 
 0.1.0: (2014-12-13)
  - Initial release
